--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/book_question/edit.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/book_question/edit.html
@@ -15,10 +15,39 @@
                 <input type="text" class="form-control" name="id" value="{$id}" readonly="readonly">
             </div>
         </div>
+
         <div class="form-group">
-            <label class="col-sm-2 control-label"><span class="form-required">*</span>预约问题:</label>
+            <label class="col-sm-2 control-label">预约问题:</label>
             <div class="col-md-6 col-sm-10">
                 <input type="text" class="form-control" name="question" value="{$question}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案1:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer1" value="{$answer1}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案2:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer2" value="{$answer2}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案3:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer3" value="{$answer3}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案4:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer4" value="{$answer4}">
             </div>
         </div>
 
