--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/book_question/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/book_question/add.html
@@ -16,6 +16,34 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案1:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer1" value="">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案2:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer2" value="">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案3:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer3" value="">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">答案4:</label>
+            <div class="col-md-6 col-sm-10">
+                <input type="text" class="form-control" name="answer4" value="">
+            </div>
+        </div>
+
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary js-ajax-submit">{:lang("SAVE")}</button>
             <a class="btn btn-default" href="{:url('BookQuestion/index')}">返回</a>
