--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -192,9 +192,10 @@
             var level_id = $(this).find("option:checked").attr("id");
             location.href = "{:url('course/index')}?s_level=" + level_id;
         })
-        $(".click").click(function(){
-            $(".video video").attr('scr',$(this).data('video'));
+        $(".radios-item .click").click(function(){
+            $(".video video").attr('src',$(this).data('video'));
             $(".video").show();
+            $(".video video").trigger("play")
         })
     });
 </script>
