绑定反馈视频，不能播放

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -119,22 +119,22 @@
                     <div class="radios-item">
                         <div class="img"><img src=<?=$feedback_video[0]['icon']?> /></div>
                         <div class="title"><?=$feedback_video[0]['title']?></div>
-                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="click" data-video="{$feedback_video[0]['content']}"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[1]['icon']?>" /></div>
                         <div class="title"><?=$feedback_video[1]['title']?></div>
-                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="click" data-video="{$feedback_video[1]['content']}"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[2]['icon']?>" /></div>
                         <div class="title"><?=$feedback_video[2]['title']?></div>
-                       <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
+                       <div class="click" data-video="{$feedback_video[1]['content']}"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[3]['icon']?>" /></div>
                         <div class="title" ><?=$feedback_video[3]['title']?></div>
-                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="click" data-video="{$feedback_video[1]['content']}"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                 </div>
             </div>
