--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -67,7 +67,7 @@
             </div>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img2.svg" />
-                <div class="text">合作加盟</div>
+                <div class="text"><a id="join">合作加盟</a></div>
             </div>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img3.svg" />
