--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -31,14 +31,15 @@
                 </div>
                 <div class="menu-list">
                     <ul>
-                        <li><a href="#">关于我们</a></li>
-                        <li>师资力量</li>
-                        <li>人才招聘</li>
-                        <li>商务加盟</li>
-                        <li>校区环境</li>
-                        <li>课程内容</li>
-                        <li>文化活动</li>
-                        <li>家长评语</li>
+
+                        <li><a href="{:url(\'/icr/about\')}">关于我们</a></li>
+                        <li><a href="{:url(\'/icr/teacher\')}">师资力量</a></li>
+                        <li><a href="{:url(\'/icr/recruit\')}">人才招聘</a></li>
+                        <li><a href="{:url(\'/icr/join\')}">商务加盟</a></li>
+                        <li><a href="{:url(\'/icr/school\')}">校区环境</a></li>
+                        <li><a href="{:url(\'/icr/course\')}">课程内容</a></li>
+                        <li><a href="{:url(\'/icr/school\')}">文化活动</a></li>
+                        <li><a href="{:url(\'/icr/course\')}">家长评语</a></li>
                     </ul>
                 </div>
                 <div class="tel-phone">
