后台课程等级

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -43,7 +43,7 @@
                         <php>}else{</php>
                             <option id="{$vo.id}" class="level-option" selected="selected">
                         <php>}</php>
-                                    Level {$vo.id}&nbsp;&nbsp;&nbsp;&nbsp;{$vo.name}
+                                    Level {$vo.level}&nbsp;&nbsp;&nbsp;&nbsp;{$vo.name}
                             </option>
                         <php>}</php>
                     </select>
