--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course_level/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course_level/add.html
@@ -32,6 +32,12 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label class="col-sm-2 control-label">课程目标:</label>
+            <div class="col-md-6 col-sm-10">
+                <textarea class="form-control" name="goal" rows="5" cols="57"></textarea>
+            </div>
+        </div>
 
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary js-ajax-submit">{:lang("SAVE")}</button>
