课程和教师的一些修改

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -39,9 +39,9 @@
                         <php>
                             foreach($levels as $vo)
                             { if ($s_level != $vo['id']){</php>
-                            <option id="{$vo.id}" class="level-option">
+                            <option id="{$vo.id}" class="level-option" style="text-align: center">
                         <php>}else{</php>
-                            <option id="{$vo.id}" class="level-option" selected="selected">
+                            <option id="{$vo.id}" class="level-option" style="text-align: center" selected="selected">
                         <php>}</php>
                                     {$vo.name}
                             </option>
