--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -20,15 +20,15 @@
     }
 </script>
 <div class="main-img">
-    <img src="/themes/RY/icr/imgs/banner3.jpg" />
+    <img src="/themes/RY/icr/imgs/banner2.jpg" />
 </div>
 <div class="main">
     <div class="item">
         <div class="tab">
             <div class="tab-content">
-                <div class="<?=$level_class[0]?>" id="level1" onclick="searchLevel(this)">初级课程 Level 1</div>
-                <div class="<?=$level_class[1]?>" id="level2" onclick="searchLevel(this)">中级课程 Level 2~4</div>
-                <div class="<?=$level_class[2]?>" id="level3" onclick="searchLevel(this)">高级课程 Level 5、6</div>
+                <div class="<?=$level_class[0]?>" id="level1" onclick="searchLevel(this)">初级课程 ICR Discover</div>
+                <div class="<?=$level_class[1]?>" id="level2" onclick="searchLevel(this)">中级课程 ICR</div>
+                <div class="<?=$level_class[2]?>" id="level3" onclick="searchLevel(this)">高级课程 ICR Plus</div>
             </div>
         </div>
         <div class="item">
