--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -57,9 +57,9 @@
                 <div class="_ right"></div>
             </div>
             <div class="h3">
-                <p>初级课程-Discover Level 1 ~ 3 适合2～5岁学员</p>
-                <p>中级课程-I Can Read Level 1 ~ 6 适合5～7岁学员 </p>
-                <p>高级课程-English Level 1 ~ 4 适合7～12岁学员</p>
+                <p>初级课程ICR Discover 1 ~ 3</p>
+                <p>中级课程ICR Level 1 ~ 6</p>
+                <p>高级课程ICR Plus 1 ~ 4</p>
             </div>
             <img src="/themes/RY/icr/imgs/course-img.svg">
             <div class="course-more">
