--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -35,7 +35,7 @@
 <div class="main">
     <div class="item">
         <div class="item-title">
-            从教育心理学出发，发挥每个孩子的想象，充满自信的学习阅读能拓展心灵，启发想象力，一生受益
+          <img  src="/themes/RY/icr/imgs/title.svg"/>
         </div>
         <div class="count">
             <div><img src="/themes/RY/icr/imgs/20.svg" /><span>培训超过25万优秀学员</span></div>
