细节修改和调整

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -149,7 +149,7 @@
                                 <div class="name">{$vo.name}</div>
                                 <div class="info-position">
                                     <i class="fa fa-map-marker"></i>
-                                    <div>{$vo.location}</div>
+                                    {$vo.location}
                                 </div>
                                 <div class="clear"></div>
                                 <div class="info-submit" name="yy">免费预约试听</div>
@@ -205,7 +205,7 @@
                 "                                <div class=\"name\">"+data['name']+"</div>\n" +
                 "                                <div class=\"info-position\">\n" +
                 "                                    <i class=\"fa fa-map-marker\"></i>\n" +
-                "                                    <div>"+data['location']+"</div>\n" +
+                                                  data['location']+
                 "                                </div>\n" +
                 "                                <div class=\"clear\"></div>\n" +
                 "                                <div class=\"info-submit\" name=\"yy\">免费预约试听</div>\n" +
