--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -24,10 +24,6 @@
                         <img src="/themes/RY/icr/imgs/wechat.png" />
                         <span>关注微信</span>
                     </div>
-                    <div class="webo">
-                        <img src="/themes/RY/icr/imgs/webo.png" />
-                        <span>关注微博</span>
-                    </div>
                 </div>
                 <div class="menu-list">
                     <ul>
@@ -52,67 +48,51 @@
             <div class="row">
                 <ul class="national">
                     <li>
-                        <a href="#">
-                            <div>
-                                <img src="/themes/RY/icr/imgs/australia-flag.svg" />
-                                <span>Australia</span>
-                                <span>澳大利亚官网</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="/themes/RY/icr/imgs/china-flag.svg" />
-                            <span>Australia</span>
-                            <span>中国官网</span>
-                        </div>
-                    </li>
-                    <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/hk-flag.svg" />
-                            <span>Australia</span>
+                            <span>Hong Kong SAR</span>
                             <span>中国香港官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/indonesia-flag.svg" />
-                            <span>Australia</span>
+                            <span>Indonesia</span>
                             <span>印度尼西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/malaysia-flag.svg" />
-                            <span>Australia</span>
+                            <span>Malaysia</span>
                             <span>马来西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                            <span>Australia</span>
+                            <span>Myanmar</span>
                             <span>缅甸管网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/singapore-flag.svg" />
-                            <span>Australia</span>
+                            <span>Singapore</span>
                             <span>新家坡官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/thailand-flag.svg" />
-                            <span>Australia</span>
+                            <span>Thailand</span>
                             <span>印度官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/vietnam-flag.svg" />
-                            <span>Australia</span>
+                            <span>Vietnam</span>
                             <span>越南官网</span>
                         </div>
                     </li>
@@ -141,16 +121,6 @@
             &times;
         </div>
         <div class="country-row">
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>澳大利亚官网</span>
-            </div>
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>China</span>
-                <span>中国官网</span>
-            </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Hong Kong</span>
